--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,19 @@ p, li{
     height: 50vh;
     margin: 1em auto;
     border-radius: 1em;
+    text-align: center;
 }
+
+.img-ampliada img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.slider img.active , .img-carousel img.active {
+    animation: fadeImg 0.8s;
+}
+
 /* fin del contenedor de imágen selecionada */
 
 /* carousel de imágenes */
@@ -197,20 +209,83 @@ p, li{
     border-radius: 0.7em;
     background-color: #89a6b3; /* cambiar al colocar las imagenes */
 }
-.button-carousel{
-    margin: 1em;
-    padding: 0.4em;
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
+
+.img-carousel img{
+    height: 100%;
+    max-width: 100%;
+    object-fit: cover;
+    border-radius: 0.7em;
 }
+
 .select{
     width: 3em;
     height: 3em;
     margin: 0.2em 6em;
 }
+
+/* botones */
+
+button {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    outline: none;
+    border: 0;
+    vertical-align: middle;
+    text-decoration: none;
+    background: transparent;
+    padding: 20px 5px;
+    color: #3c376f;
+    font-size: 2rem;
+  }
+  
+  button svg {
+    position: relative;
+    display: inline-block;
+    transform: translateX(0);
+    transition: transform 0.3s ease;
+  }
+  
+  .previous:hover svg {
+    transform: translateX(-10px) scale(1.2);
+  }
+  
+  .next:hover svg {
+    transform: translateX(10px) scale(1.2);
+  }
+
+  .slider-nav{
+    position: absolute;
+    width: 22%;
+  }
+  
+  .slider-nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .slider-nav li {
+    display: flex;
+    text-align: center;
+  }
+
+  .slider-nav svg {
+    display: block;
+    width: 100%;
+  }
+
+  @keyframes fadeImg {
+    from {
+      opacity: 0;
+    }
+  
+    to {
+      opacity: 1;
+    }
+  }
 
 /* fin del carousel de imágenes
 
@@ -284,11 +359,6 @@ p, li{
 .vr-select{
     border: solid;
 }
-
-/*#model-3d{
-    width: 100%;
-    height: 100%;
-}*/
 
 
 @media only screen and (max-width: 600px){
