función botones cambio de imagnes (360 y vr) y cambios de información

--- a/css/style.css
+++ b/css/style.css
@@ -246,11 +246,11 @@ button {
     transition: transform 0.3s ease;
   }
   
-  .previous:hover svg {
+  .previous:hover svg, .previousVr:hover svg {
     transform: translateX(-10px) scale(1.2);
   }
   
-  .next:hover svg {
+  .next:hover svg, .nextVr:hover svg {
     transform: translateX(10px) scale(1.2);
   }
 
