--- a/css/style.css
+++ b/css/style.css
@@ -23,11 +23,12 @@ li {
 }
 
 .lang {
-  margin: 15px;
-  background: #415762;
-  border-radius: 100%;
+  margin: 20px 5px 20px 25px;
+  background: linear-gradient(to top, #415762, #89a6b3);
+  box-shadow: 0px 2px 6px 0px #89a6b3;
+  border-radius: 5px;
   width: 100px;
-  height: 100px;
+  height: 40px;
   border: none;
   color: #ffffff;
 }
@@ -37,24 +38,60 @@ li {
   height: calc(100vh - 125px);
 }
 
+.img-fondo{
+  position: absolute;
+  z-index: -1;
+  width: calc(100% - 280px);
+  padding: 0px 25px;
+}
+
+.img-fondo img{
+  width: 100%;
+  height: 50vh;
+  object-fit: cover;
+}
+
+.text_container{
+  display: flex;
+  flex-direction: column;
+  height: calc(100vh - 186px);
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.text_container div{
+  padding: 5px 20px;
+  border-radius: 5px;
+  width: 90%;
+  background-color: #ffffff;
+  box-shadow: 0px -15px 25px -13px #415762;
+}
+
 .title {
-  margin-bottom: 15px;
+  color: #415762;
 }
 
 .conteiner_logo {
   width: calc(100% - 280px);
-  height: 125px;
-  background-color: rgb(0, 195, 255);
+  height: 100%;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #ffffff;
 }
 
 .conteiner_logo img {
-  width: 50px;
-  height: 50px;
+  width: 100%;
+  height: 100%;
+  max-width: 140px;
+  max-height: 100px;
   text-align: center;
+  padding: 0px 5px;
 }
+
+
 
 .nav_bar {
   text-align: center;
@@ -143,6 +180,10 @@ li {
   background-color: #415762;
 }
 
+.nav_bar_maps ol, .nav_bar_maps h1{
+  height: 100px;
+}
+
 .nav_bar_maps h1 {
   text-align: center;
   margin: 20px;
@@ -161,10 +202,6 @@ li {
   display: flex;
   flex-direction: column;
   margin-top: 100px;
-}
-
-.galeria {
-  margin-top: 140px;
 }
 
 .img-ampliada {
@@ -278,13 +315,6 @@ li {
   border-radius: 0.7em;
 }
 
-@media screen and (max-width: 640px) {
-  .container-carousel-img {
-    --img-carousel-max-width: 280px;
-    --img-carousel-max-height: 200px;
-  }
-}
-
 /*------- Fin slider de imágenes -----*/
 
 /* INICIO galeria de imagenes cartas */
@@ -298,8 +328,8 @@ li {
 }
 
 .contariner_cards_scroll {
-  height: 84%;
-  margin-top: 125px;
+  height: 80%;
+  margin-top: 90px;
 }
 
 .card {
@@ -359,11 +389,27 @@ li {
 
   .conteiner_logo {
     width: 100%;
-    margin-bottom: 140px;
+    margin-bottom: 160px;
+  }
+  
+  .img-fondo{
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    top: 0;
+    position: absolute;
+    z-index: -1;
+    padding: 0px;
+  }
+
+  .img-fondo img{
+    height: 100%;
   }
 
   .text_container {
-    height: 70vh;
+    height: 100%;
+    margin-top: 355px;
+    background: linear-gradient(to top, #ffffff 80%, #ffffff00);
   }
 
   .nav_bar {
@@ -429,14 +475,15 @@ li {
     width: 100%;
   }
 
+  .container-carousel-img {
+    --img-carousel-max-width: 280px;
+    --img-carousel-max-height: 200px;
+  }
+
   /* galeria Vr boton */
   .container_button {
     display: flex;
     flex-wrap: nowrap;
   }
 
-  .lang {
-    width: 75px;
-    height: 75px;
-  }
 }
