--- a/css/style.css
+++ b/css/style.css
@@ -13,246 +13,278 @@ button {
 p,
 li {
   font-family: "Roboto Slab", serif;
+  text-align: justify;
 }
 
 /* INICIO estilos panel principal */
 
-.flex_container {
+.flex-container {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
 }
 
-.container_button {
+.container-button {
   z-index: 1;
   position: absolute;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  width: 100%;
+  width: calc(100vw - 310px);
 }
 
 .lang {
-  margin: 20px 5px 20px 25px;
+  margin: 17px 12px;
   background: #415762;
-  box-shadow: 0px 1px 1px 2px #89a6b3;
-  border-radius: 5px;
-  width: 100%;
-  min-width: 70px;
-  max-width: 100px;
+  box-shadow: 0px 2px 3px 0px #00000056;
+  border-radius: 20px;
+  width: 100px;
   height: 40px;
   border: none;
   color: #ffffff;
-  font-size: 0.85em;
-  letter-spacing: 0.1em;
+  font-size: 1em;
 }
 
 .lang:hover {
   box-shadow: none;
 }
 
-.container_info {
-  width: calc(100% - 280px);
-  height: calc(100vh - 140px);
+.container-info {
+  width: calc(100vw - 150px);
+  height: 100%;
 }
 
 .img-fondo {
-  position: absolute;
-  z-index: -1;
-  width: calc(100% - 280px);
+  width: calc(100vw - 150px);
 }
 
 .img-fondo img {
   width: 100%;
-  height: 65vh;
+  height: 75vh;
   object-fit: cover;
 }
 
-.text_container {
+.text-container {
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 186px);
-  justify-content: flex-end;
+  height: 200px;
   align-items: center;
+  width: calc(100vw - 150px);
+  position: absolute;
+  top: calc(75vh - 200px);
+  background-color: rgba(255, 255, 255, 0.45);
 }
 
-.text_container div {
-  padding: 5px 20px;
-  border-radius: 5px;
-  height: 40vh;
-  width: 90%;
-  background-color: #ffffff;
-  box-shadow: 0px -14px 36px -11px #415762;
+.text-container div {
+  padding: 10px 20px;
+  width: calc(100vw - 150px);
 }
 
 .title {
   color: #415762;
-  font-size: 1.7em;
-  letter-spacing: 0.15em;
   font-weight: bold;
+  text-align: left;
 }
 
-.conteiner_logo {
-  width: calc(100% - 280px);
-  height: 100%;
+.container-logo {
+  width: calc(100vw - 150px);
+  height: 25vh;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  display: flex;
-  flex-wrap: wrap;
-  background-color: #ffffff;
 }
 
-.conteiner_logo img {
-  width: 100%;
-  height: 100%;
-  max-width: 140px;
-  max-height: 100px;
-  text-align: center;
+.container-logo div{
+  border-right: 2px solid #89A6B3;
   padding: 0px 5px;
+}
+
+.container-logo div:last-child{
+  border-right: none;
+}
+
+.container-logo div img{
+  width: 100%;
 }
 
 /*----------------------------------------
 Barra de navegación
 --------------------------*/
 
-.nav_bar {
-  width: 280px;
+.nav-bar {
+  width: 150px;
   height: 100vh;
   position: absolute;
   top: 0px;
   right: 0px;
   background: #415762;
-  text-align: left;
-  font-weight: bold;
   font-size: 0.85em;
-  z-index: 1;
-  box-shadow: 0px 4px 10px -2px #415762;
+  box-shadow: -4px 0px 4px rgba(0, 0, 0, 0.25);
 }
 
-.nav_bar ol {
+.nav-bar ol {
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
   align-items: center;
   height: 100%;
   list-style: none;
 }
 
-#nav_bar_small {
-  height: auto;
-}
-
-.button_nav_bar {
-  border: solid;
-  height: 0.2em;
-  width: 90%;
-  margin: 3.2em 0;
+.button-nav-bar {
+  border-bottom: 2px solid #89A6B3;
+  height: 100vh;
+  width: 80%;
+  margin: auto;
   display: flex;
-  border: none;
-  position: relative;
-  background: linear-gradient(to right, #89a6b3 75%, #ffffff);
+  justify-content: center;
+  align-items: center;
 }
 
-.button_nav_bar a {
-  text-transform: uppercase;
+.button-nav-bar:last-child{
+  border-bottom: none;
+}
+
+.button-nav-bar a {
   text-decoration: none;
   color: #ffffff;
-  display: block;
-  transition: all ease-out 300ms;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: all ease-in 800ms;
   margin-top: -40px;
-  letter-spacing: 0.2em;
+  letter-spacing: 0.1em;
   opacity: 0.65;
 }
 
-.button_nav_bar a:hover {
+.button-nav-bar a:hover {
   color: #ffffff;
   opacity: 1;
 }
 
-.sub_text {
-  font-family: "Roboto Slab", serif;
-  position: absolute;
-  margin-top: 30px;
+.button-nav-bar a img{
+  height: 60px;
+  margin-bottom: 10px;
+}
+
+.button-nav-bar a p{
+  height: 100%;
+  margin: auto;
+}
+
+a p.sub-text {
   opacity: 0.6;
   font-size: 0.75em;
-}
-
-#buttom_360 {
-  height: 15vh;
-  align-items: center;
-  justify-content: flex-end;
-}
-
-/*-------------------------------------
-Información de interes en NAVBAR
------------------------------*/
-
-#info {
-  background: #89a6b3;
-  justify-content: flex-start;
-  height: 85vh;
-  width: 280px;
-  position: absolute;
-  bottom: 0px;
-  right: 0px;
-}
-
-#info > li {
-  padding: 1em;
-  list-style: none;
-  font-size: 1em;
-}
-
-.container_text_maps {
-  color: #ffffff;
-  list-style: none;
-  padding: 1em 1em 1em 0;
-  font-size: 1.2em;
-  font-weight: normal;
-  letter-spacing: 0.2em;
-}
-
-.container_text_maps li {
-  margin-bottom: 1em;
-}
-
-.color {
-  color: #415762;
-  font-size: 1.2em;
-  font-weight: bold;
+  margin-top: 10px;
+  text-align: center;
+  display: none;
 }
 
 /*-------------------------------------
 Historia dólmenes
 -----------------------------*/
 
-.container_info_dolmenes {
-  height: 100vh;
+.row-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
-.contariner_cards_scroll {
+.container-cards-scroll {
   height: 80vh;
-  margin-top: 100px;
+  width: calc(100vw - 150px );
+  margin: 80px auto 0px;
+  padding: 0px 30px;
+}
+
+.col-container{
+  min-width: 170px;
+  min-height: 200px;
+  max-width: 340px;
+  max-height: 400px;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(137, 166, 179, 0.6);;
+  border-radius: 14px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px auto;
+  padding: 4px;
+}
+
+.col-container-img{
+  width: 100%;
+  height: 20vh;
+  position: relative;
+}
+
+.col-container-img>img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 14px;
+}
+
+.col-container-360{
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  background-color: rgba(137, 166, 179, 0.6);;
+  border-radius: 14px;
+  width: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.col-container-360>p{
+  margin-bottom: 0px;
+  font-weight: bold;
+}
+
+.col-container-text{
+  width: 85%;
+  margin-top: 10px;
+}
+
+.col-container-text>h3{
+  text-align: center;
 }
 
 /*-------------------------------------
 Mapas dólmenes
 -----------------------------*/
 
-.maps_container {
-  height: 70vh;
-  margin: 100px 20px 15px;
+.data-dolmen{
+  height: 100%;
 }
 
-.maps_container iframe{
-  width: 100%;
-  height: 100%;
+.maps-container {
+  margin-top: 80px;
+  height: 80vh;
+  width: calc(100vw - 300px);
+  padding: 0px 30px;
+}
+
+.maps-info-container, .galery-info-container{
+  width: 300px;
+  height: 100vh;
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding-right: 3em;
 }
 
 #map{
   width: 100%;
   height: 100%;
+  border-radius: 14px;
 }
 
 .bi {
@@ -264,12 +296,6 @@ Mapas dólmenes
 }
 .mapboxgl-ctrl{
   display: none !important;
-}
-
-#popup{
-  width: 100px;
-  height: 50px;
-  background-color: aqua;
 }
 
 .mapboxgl-popup-content {
@@ -289,42 +315,92 @@ Mapas dólmenes
   }
 
 /*-------------------------------------
+Información de interes 
+-----------------------------*/
+
+  #info {
+    padding: 0px;
+    margin-top: 85px;
+  }
+
+  #info > li {
+    list-style: none;
+  }
+
+  .container-text-maps {
+    list-style: none;
+    padding: 0px;
+  }
+
+  .container-text-maps li {
+    margin-bottom: 1em;
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: nowrap;
+  }
+
+  .container-text-maps li>img{
+    width: 30px;
+    margin-right: 2vw;
+  }
+
+  .button-info{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    border: none;
+    border-radius: 7px;
+    background-color: #89A6B3;
+    height: 45px;
+    width: 150px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    margin: 20px 0px;
+    float: right;
+  }
+
+  .button-info div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .button-info div:first-child{
+    background-color: #415762;
+    width: 45px;
+    height: 45px;
+    border-radius: 7px;
+  }
+
+  .button-info div:first-child>img{
+    width: 45px;
+    object-fit: cover;
+  }
+
+  .button-info div:last-child{
+    height: 100%;
+    width: 100%;
+  }
+
+  .button-info div:last-child>p{
+    margin-bottom: 0px;
+    font-family: "Roboto", sans-serif;
+  }
+
+/*-------------------------------------
 Galería img 360º
 -----------------------------*/
 
-.container_cards {
+.container-cards {
   height: 100vh;
-  width: 100%;
-}
-
-.card {
-  margin: auto;
-  min-width: 300px !important;
-  max-width: 380px;
-}
-
-.card:hover {
-  box-shadow: 0px 4px 14px 1px #89a6b3;
-}
-
-.card-img-top {
-  height: 70%;
-}
-
-.card-body {
-  text-align: center;
-  background: #415762;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #ffffff;
+  width: 100vw;
 }
 
 /*-------------------------------------
 Dolmen Mandubi
 -----------------------------*/
 
-.img_float {
+.img-float {
   float: right;
   min-width: 200px;
   max-width: 380px;
@@ -336,7 +412,7 @@ Dolmen Mandubi
 IMG 360º
 -----------------------------*/
 
-.container_img_360 {
+.container-img-360 {
   width: 100%;
   height: 100vh;
 }
@@ -348,20 +424,16 @@ IMG 360º
 /*-------------------------------------
 Galeria de imagenes
 -----------------------------*/
-.container_info_galery {
-  height: 100vh;
+.galery-container {
+  margin-top: 80px;
+  height: 100%;
+  width: calc(100vw - 300px);
+  padding: 0px 30px;
 }
 
-.contenedor {
-  display: flex;
-  flex-direction: column;
-  margin-top: 100px;
-}
-
-.img-ampliada {
+.img-ampliada{
   width: 100%;
-  height: 50vh;
-  margin: 1em auto;
+  height: 60vh;
 }
 
 .img-ampliada img,
@@ -369,280 +441,279 @@ Galeria de imagenes
   height: 100%;
   width: 100%;
   object-fit: cover;
+  border-radius: 14px;
 }
 
 .img-ampliada img.active,
-.img-carousel img.active,
+img.img-carousel .active,
 .img-ampliada model-viewer.active,
-.img-carousel model-viewer.active {
+model-viewer.img-carousel .active {
   animation: fadeImg 0.8s;
 }
 
-.carousel {
+/* carousel */
+
+.carousel{
   width: 100%;
-  height: 230px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-}
-
-.container-carousel-img {
-  --img-carousel-width: 80%;
-  --img-carousel-width: 380px;
-  --img-carousel-height: 200px;
-  --carousel-min-width: 600px;
-  z-index: 1;
-  position: relative;
-  margin: 0 auto;
-  width: 100%;
-  height: var(--img-carousel-height);
-  min-width: var(--carousel-min-width);
-  transition: filter 0.3s ease;
-  margin: 1em;
-}
-
-.container-carousel-img.smooth-return {
-  transition: all 0.2s ease;
-}
-
-.container-carousel-img .img-carousel {
-  width: var(--img-carousel-width);
-  max-width: var(--img-carousel-max-width);
-  text-align: center;
-  min-width: 250px;
-  height: var(--img-carousel-height);
-  position: absolute;
-  margin: 0 auto;
-  transition: inherit;
-  -webkit-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.3);
-  border-radius: 0.7em;
-  filter: brightness(0.9);
-  background-color: white;
-  justify-content: center;
+  height: 30vh;
   display: flex;
   align-items: center;
+}
+
+.container-carousel-img{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  overflow-x: hidden;
+  z-index: 5;
+}
+
+.carousel.smooth-return {
+transition: all 0.6s ease;
+z-index: -5;
+}
+
+.img-carousel{
+width: calc(100% / 5);
+max-width: 400px;
+min-width: 300px;
+height: 100%;
+max-height: 220px;
+min-height: 150px;
+box-shadow: 0px 2px 8px 0px rgba(50, 50, 50, 0.5);
+position: absolute;
+filter: brightness(0.9);
+transition: inherit;
+border-radius: 0.7em;
+background-color: #ffffff;
 }
 
 .img-carousel.highlight {
-  filter: brightness(1);
+filter: brightness(1);
 }
 
-.img-carousel img,
-.img-carousel model-viewer {
-  height: 107%;
-  max-width: 100%;
-  object-fit: cover;
-  border-radius: 0.7em;
+.img-carousel[data-pos="0"] {
+  transform: translateX(0%) scale(1);
+z-index: 0;
 }
 
-.image-container {
-  width: 8em;
-  height: 8em;
-  position: relative;
-  background-size: cover;
-  margin-bottom: 2em;
-  border-radius: 100%;
-  padding: 1em;
-  -webkit-box-shadow: inset 0px 0px 17px 0px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: inset 0px 0px 17px 0px rgba(0, 0, 0, 0.3);
-  box-shadow: inset 0px 0px 17px 0px rgba(0, 0, 0, 0.3);
+.img-carousel[data-pos="-1"] {
+transform: translateX(-60%) scale(.8);
+z-index: -1;
 }
 
-.image-container::after {
-  content: "";
-  display: block;
-  width: 120%;
-  height: 120%;
-  border: solid 3px rgba(0, 0, 0, 0.1);
-  border-radius: 100%;
-  position: absolute;
-  top: calc(-10% - 3px);
-  left: calc(-10% - 3px);
+.img-carousel[data-pos="1"] {
+transform: translateX(60%) scale(.8);
+z-index: -1;
 }
+
+.img-carousel[data-pos="-2"] {
+transform: translateX(-115%) scale(.5);
+z-index: -2;
+}
+
+.img-carousel[data-pos="2"] {
+transform: translateX(115%) scale(.5);
+z-index: -2;
+}
+
+/* Fin de carousel */ 
 
 /*-------------------------------------
-Galeria de imagenes 3D
+Galeria de imagenes 3D boton
 -----------------------------*/
 
-#buttonVr {
-  z-index: 1;
-  position: absolute;
-  width: calc(100% - 280px);
-  padding-right: 20px;
+#hidden{
+  display: none;
+  margin-left: auto;
 }
 
-.container-button-vr {
-  display: flex;
-  flex-wrap: nowrap;
-  width: 350px;
-}
-
-#buttonVr:last-child {
-  justify-content: end;
-}
-
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 820px) {
   /* panel principal */
 
-  .container_info {
-    width: 100%;
-    height: 100vh; /* Revisar si no modificar en index */
+  .flex-container{
+    justify-content: center;
+  }
+
+  .container-info {
+    width: 100vw;
+    height: 78vh;
     display: flex;
     flex-direction: column;
+    align-items: center;
   }
 
-  .height{
-    height: 90vh;
+  .container-logo {
+    width: 100vw;
+    height: 100%;
   }
 
-  .conteiner_logo {
+  .container-button{
     width: 100%;
-    margin-bottom: 160px;
   }
 
   .img-fondo {
-    width: 100%;
-    height: 90vh;
-    object-fit: cover;
-    top: 0;
+    width: 95vw;
+    height: 65vh;
+    margin-top: 80px;
+    border-radius: 14px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  }
+
+  .img-fondo img{
+    height: 100%;
+    border-radius: 14px;
+  }
+
+  .text-container{
+    top: calc((65vh + 80px) - 295px);
     position: absolute;
-    z-index: -1;
-    padding: 0px;
+    height: 295px;
+    width: 95vw;
+    border-radius: 14px;
   }
 
-  .img-fondo img {
+  .text-container div {
     height: 100%;
-  }
-
-  .text_container {
-    height: 100%;
-    margin-top: 545px;
-    background: linear-gradient(to top, #ffffff 80%, #ffffff00);
-  }
-
-  .text_container div {
-    width: 100%;
+    width: 95vw;
   }
 
   /*----------------------------------------
 Barra de navegación
 --------------------------*/
 
-  .nav_bar {
+  .nav-bar {
     position: fixed;
-    top: auto;
-    bottom: 0px;
-    width: 100%;
-    height: 100px;
-    box-shadow: 0px -4px 10px -2px #415762;
+    top: calc(100vh - 100px);
+    right: inherit;
+    width: 95vw;
+    height: 80px;
+    border-radius: 20px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     font-size: 0.7em;
   }
 
-  .nav_bar ol {
+  .nav-bar ol {
     flex-direction: row;
   }
 
-  #nav_bar_small {
-    height: 100px;
-  }
-
-  .button_nav_bar {
+  .button-nav-bar {
     border-bottom: none;
-    border-right: solid 2px white;
-    height: 100%;
-    background: #415762;
-    padding: 1em;
+    border-right: solid 2px #89A6B3;
+    height: 60px;
     min-width: 100px;
+    margin: auto;
+    height: 80%;
   }
 
-  .button_nav_bar:last-child {
+  .button-nav-bar:last-child {
     border-right: none;
   }
 
-  .button_nav_bar a {
-    text-align: center;
+  .button-nav-bar a {
     margin: auto;
+    height: 60px;
+    width: 90%;
   }
 
-  #buttom_360 {
+  .button-nav-bar a img{
+    height: 35px;
+  }
+
+  #buttom-360 {
     justify-content: center;
     height: 100%;
   }
 
-  /*-------------------------------------
-Información de interes en NAVBAR
------------------------------*/
-
-  #info {
-    position: relative;
-    width: 100vw;
-    bottom: auto;
-    z-index: -1;
-  }
 
   /*-------------------------------------
 Historia dólmenes
 -----------------------------*/
 
-  .container_info_dolmenes {
-    margin-bottom: 70px;
-  }
+.container-info-dolmenes {
+  height: calc(100vh - 120px);
+  width: 95vw;
+}
 
-  .sub_text {
-    display: none;
-  }
+.container-cards-scroll {
+  width: 95vw;
+  height: 90vh;
+  padding: 0px;
+}
 
   /*-------------------------------------
 Mapas dólmenes
 -----------------------------*/
+  .data-dolmen{
+    height: 100%;
+  }
 
-  .maps_container {
-    margin: 110px 0px 40px;
-    width: 100%;
+  .maps-container {
+    margin-top: 80px;
+    width: 95vw;
+    height: 40vh;
+    padding: 0px;
+  }
+
+  .maps-info-container, .galery-info-container{
+    width: 95vw;
+    height: 100%;
+    position: relative;
+    padding: 0px;
+  }
+
+  .button-info{
+    margin-right: 2vw;
   }
 
   /*-------------------------------------
 Dolmen Mandubi
 -----------------------------*/
 
-  .img_float {
+  .img-float {
     margin: auto;
     max-width: 100%;
   }
 
   /*-------------------------------------
-Galeria de imagenes
+Información de interes 
 -----------------------------*/
-  .container_info_galery {
-    height: 95vh;
-  }
 
-  .img-ampliada {
-    width: 100%;
-  }
-
-  .container-carousel-img {
-    --img-carousel-max-width: 280px;
-    --img-carousel-max-height: 200px;
-  }
+.galery-info-container>#info {
+  margin-top: 20px;
+}
 
   /*-------------------------------------
-Galeria de imagenes 3D
+Galeria de imagenes
 -----------------------------*/
+.galery-container {
+  margin-top: 80px;
+  width: 95vw;
+  height: 100%;
+  padding: 0px;
+}
 
-  #buttonVr {
-    width: 100%;
-    padding: 0px;
-  }
+.img-ampliada{
+  width: 95vw;
+  height: 50vh;
+  padding: 0px;
+}
 
-  .container-button-vr{
-    width: 300px;
-  }
+.carousel{
+  width: 95vw;
+  height: 20vh;
+  margin-top: 1em;
+}
 
-  #buttonVr .container-button-vr .lang {
-    margin: 20px auto 0px;
+}
+
+/*--------------------------------------------
+estilo boton 360º mobile
+-----------------------------------------*/
+@media screen and (max-width: 400px){
+  .maps-info-container>.button-info:first-child{
+    float: left;
   }
 }
