--- a/css/style.css
+++ b/css/style.css
@@ -55,13 +55,14 @@ li {
 }
 
 .img-fondo {
-  width: calc(100vw - 150px);
+  width: calc(90vw);
 }
 
 .img-fondo img {
-  width: 100%;
-  height: 75vh;
-  object-fit: cover;
+    width: 100%;
+    height: 98vh;
+    margin-top: 16px;
+    margin-left: 31px;
 }
 
 .text-container {
